errors.txt
In file included from UI.h:8:0,
                 from UI.cpp:10:
Directory.h:24:63: error: could not convert ‘(operator new(24ul), (<statement>, ((std::vector<FileControlBlock>*)<anonymous>)))’ from ‘std::vector<FileControlBlock>*’ to ‘std::vector<FileControlBlock>’
   vector<FileControlBlock> dir = new vector<FileControlBlock>();
                                                               ^
In file included from UI.cpp:10:0:
UI.h: In function ‘void edit(std::__cxx11::string)’:
UI.h:149:42: error: ‘std::__cxx11::string {aka class std::__cxx11::basic_string<char>}’ has no member named ‘eof’
     while (getline(cin, input) && !input.eof()){
                                          ^~~
In file included from Directory.cpp:2:0:
Directory.h:24:63: error: could not convert ‘(operator new(24ul), (<statement>, ((std::vector<FileControlBlock>*)<anonymous>)))’ from ‘std::vector<FileControlBlock>*’ to ‘std::vector<FileControlBlock>’
   vector<FileControlBlock> dir = new vector<FileControlBlock>();
                                                               ^
Directory.cpp: In function ‘bool createFile(std::__cxx11::string)’:
Directory.cpp:6:22: error: ‘hasFreeSpace’ was not declared in this scope
     if(!hasFreeSpace()){
                      ^
Directory.cpp:9:5: error: ‘dir’ was not declared in this scope
     dir[counter] = new FileControlBlock(name);
     ^~~
Directory.cpp:9:9: error: ‘counter’ was not declared in this scope
     dir[counter] = new FileControlBlock(name);
         ^~~~~~~
Directory.cpp: In function ‘bool nameExists(std::__cxx11::string)’:
Directory.cpp:16:50: error: ‘dir’ was not declared in this scope
     for (vector<FileControlBlock>::iterator it = dir.begin() ; it != dir.end(); ++it){
                                                  ^~~
Directory.cpp:17:14: error: ‘std::vector<FileControlBlock>::iterator {aka class __gnu_cxx::__normal_iterator<FileControlBlock*, std::vector<FileControlBlock> >}’ has no member named ‘getFileName’
       if(*it.getFileName() == name){
              ^~~~~~~~~~~
Directory.cpp: In function ‘std::__cxx11::string getFileName(int)’:
Directory.cpp:25:12: error: ‘dir’ was not declared in this scope
     return(dir[file].getFile());
            ^~~
Directory.cpp: In function ‘int getFileSize(int)’:
Directory.cpp:29:12: error: ‘dir’ was not declared in this scope
     return(dir[file].getSize());
            ^~~
Directory.cpp: In function ‘bool deleteFile(std::__cxx11::string)’:
Directory.cpp:32:42: error: ‘getFCB’ was not declared in this scope
     return(deleteFileFromDisk(getFCB(name).getFirstPointer(), getFCB(name).getLastPointer()));
                                          ^
Directory.cpp:32:92: error: ‘deleteFileFromDisk’ was not declared in this scope
     return(deleteFileFromDisk(getFCB(name).getFirstPointer(), getFCB(name).getLastPointer()));
                                                                                            ^
Directory.cpp: In function ‘FileControlBlock getFCB(std::__cxx11::string)’:
Directory.cpp:35:50: error: ‘dir’ was not declared in this scope
     for (vector<FileControlBlock>::iterator it = dir.begin() ; it != dir.end(); ++it){
                                                  ^~~
Directory.cpp:36:14: error: ‘std::vector<FileControlBlock>::iterator {aka class __gnu_cxx::__normal_iterator<FileControlBlock*, std::vector<FileControlBlock> >}’ has no member named ‘getFileName’
       if(*it.getFileName() == name)
              ^~~~~~~~~~~
FileSystem.cpp: In constructor ‘FileSystem::FileSystem()’:
FileSystem.cpp:11:2: error: expected initializer before ‘proc’
  proc = new DiskProcessType(14, 100); //Disk Process
  ^~~~
FileSystem.cpp:12:31: error: no match for ‘operator=’ (operand types are ‘std::vector<int>’ and ‘std::vector<int>*’)
  freeBlocks = new vector<int>();
                               ^
In file included from /usr/include/c++/6.3.1/vector:69:0,
                 from FileSystem.h:6,
                 from FileSystem.cpp:4:
/usr/include/c++/6.3.1/bits/vector.tcc:167:5: note: candidate: std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(const std::vector<_Tp, _Alloc>&) [with _Tp = int; _Alloc = std::allocator<int>]
     vector<_Tp, _Alloc>::
     ^~~~~~~~~~~~~~~~~~~
/usr/include/c++/6.3.1/bits/vector.tcc:167:5: note:   no known conversion for argument 1 from ‘std::vector<int>*’ to ‘const std::vector<int>&’
In file included from /usr/include/c++/6.3.1/vector:64:0,
                 from FileSystem.h:6,
                 from FileSystem.cpp:4:
/usr/include/c++/6.3.1/bits/stl_vector.h:450:7: note: candidate: std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(std::vector<_Tp, _Alloc>&&) [with _Tp = int; _Alloc = std::allocator<int>]
       operator=(vector&& __x) noexcept(_Alloc_traits::_S_nothrow_move())
       ^~~~~~~~
/usr/include/c++/6.3.1/bits/stl_vector.h:450:7: note:   no known conversion for argument 1 from ‘std::vector<int>*’ to ‘std::vector<int>&&’
/usr/include/c++/6.3.1/bits/stl_vector.h:471:7: note: candidate: std::vector<_Tp, _Alloc>& std::vector<_Tp, _Alloc>::operator=(std::initializer_list<_Tp>) [with _Tp = int; _Alloc = std::allocator<int>]
       operator=(initializer_list<value_type> __l)
       ^~~~~~~~
/usr/include/c++/6.3.1/bits/stl_vector.h:471:7: note:   no known conversion for argument 1 from ‘std::vector<int>*’ to ‘std::initializer_list<int>’
FileSystem.cpp: At global scope:
FileSystem.cpp:33:6: error: prototype for ‘bool FileSystem::hasFreeSpace(int)’ does not match any in class ‘FileSystem’
 bool FileSystem::hasFreeSpace(int fileSize){
      ^~~~~~~~~~
In file included from FileSystem.cpp:4:0:
FileSystem.h:30:8: error: candidate is: bool FileSystem::hasFreeSpace()
   bool hasFreeSpace();
        ^~~~~~~~~~~~
FileSystem.cpp: In member function ‘bool FileSystem::saveFileToDisk(int, int&, std::__cxx11::string)’:
FileSystem.cpp:66:42: error: ‘strcpy’ was not declared in this scope
         strcpy(buffer->data, test.c_str());
                                          ^
FileSystem.cpp: In member function ‘bool FileSystem::deleteFileFromDisk(int, int)’:
FileSystem.cpp:88:47: error: ‘bsize’ was not declared in this scope
     DiskBlockType *buffer = new DiskBlockType(bsize);
                                               ^~~~~
FileSystem.cpp:95:32: error: ‘strlen’ is not a member of ‘std’
                     std::cout<<std::strlen(buffer->data)<<std::endl;
                                ^~~
FileSystem.cpp:96:40: error: ‘strlen’ is not a member of ‘std’
                     for(int i = 0; i < std::strlen(buffer->data); i++){
                                        ^~~
FileSystem.cpp: In member function ‘std::__cxx11::string FileSystem::readBlocks(int, int)’:
FileSystem.cpp:132:47: error: ‘bsize’ was not declared in this scope
     DiskBlockType* buffer = new DiskBlockType(bsize);
                                               ^~~~~
FileSystem.cpp:137:32: error: ‘strlen’ is not a member of ‘std’
             for(int i = 0; i < std::strlen(buffer->data); i++){
                                ^~~
